crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/pipeline-operator-minimal.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\babel-plugins\\pipeline-operator-minimal.js"
---

# Input

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-pipeline-operator
// https://github.com/tc39/proposal-pipeline-operator/

let result = exclaim(capitalize(doubleSay("hello")));
result //=> "Hello, hello!"

let result = "hello"
  |> doubleSay
  |> capitalize
  |> exclaim;

result //=> "Hello, hello!"
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -4,6 +4,9 @@
 let result = exclaim(capitalize(doubleSay("hello")));
 result; //=> "Hello, hello!"
 
-let result = "hello" |> doubleSay |> capitalize |> exclaim;
+let result = "hello"
+  |> doubleSay
+  |> capitalize
+  |> exclaim;
 
 result; //=> "Hello, hello!"
```

# Output

```js
// https://babeljs.io/docs/en/babel-plugin-proposal-pipeline-operator
// https://github.com/tc39/proposal-pipeline-operator/

let result = exclaim(capitalize(doubleSay("hello")));
result; //=> "Hello, hello!"

let result = "hello"
  |> doubleSay
  |> capitalize
  |> exclaim;

result; //=> "Hello, hello!"
```


# Errors
```
pipeline-operator-minimal.js:8:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected an expression for the left hand side of the `>` operator.
  
  × This operator requires a left hand side value
  
    ┌─ pipeline-operator-minimal.js:8:4
    │
  8 │   |> doubleSay
    │    ^
  
pipeline-operator-minimal.js:9:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected an expression for the left hand side of the `>` operator.
  
  × This operator requires a left hand side value
  
    ┌─ pipeline-operator-minimal.js:9:4
    │
  9 │   |> capitalize
    │    ^
  
pipeline-operator-minimal.js:10:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected an expression for the left hand side of the `>` operator.
  
  × This operator requires a left hand side value
  
     ┌─ pipeline-operator-minimal.js:10:4
     │
  10 │   |> exclaim;
     │    ^
  

```


